# FineStructureVoxel

./: .gitignore  CMakeLists.txt  DESIGN.md  PLAN.md  README.md
docs/: 01-executive-summary.md  02-prior-art.md  03-architecture.md  04-core-data-structures.md  05-world-management.md  06-rendering.md  07-lod.md  08-physics.md  09-lighting.md  10-input.md  11-persistence.md  12-scripting.md  13-batch-operations.md  14-threading.md  15-finestructurevk-integration.md  16-finestructurevk-critique.md  17-implementation-phases.md  18-open-questions.md  19-block-models.md  20-finestructurevk-recommendations.md  20-large-world-coordinates.md  21-clipboard-schematic.md  22-phase6-lod-design.md  23-distance-and-loading.md  24-event-system.md  25-entity-system.md  26-network-protocol.md  27-world-generation.md  AI-NOTES.md  FEATURE-CHECKLIST.md  INDEX.md  LLM_REFERENCE.md  PLAN-fence-wait-thread.md  PLAN-game-session.md  PLAN-mesh-architecture-improvements.md  PLAN-network-layer.md  REVIEW-TODO.md  SOURCE-DOC-MAPPING.md  STYLE_GUIDE.md  USER_GUIDE.md  (+5 more)
examples/: audio_test.cpp  render_demo.cpp
include/finevox/: alarm_queue.hpp  batch_builder.hpp  biome.hpp  biome_loader.hpp  biome_map.hpp  block_atlas.hpp  block_data_helpers.hpp  block_event.hpp  block_handler.hpp  block_model.hpp  block_model_loader.hpp  block_type.hpp  blocking_queue.hpp  cbor.hpp  chunk_column.hpp  clipboard_manager.hpp  coalescing_queue.hpp  coalescing_queue_impl.hpp  column_manager.hpp  config.hpp  config_file.hpp  config_parser.hpp  data_container.hpp  distances.hpp  entity.hpp  entity_manager.hpp  entity_registry.hpp  event_queue.hpp  feature.hpp  feature_loader.hpp  feature_ore.hpp  feature_registry.hpp  feature_schematic.hpp  feature_tree.hpp  generation_passes.hpp  graphics_event_queue.hpp  io_manager.hpp  item_registry.hpp  keyed_queue.hpp  light_data.hpp  (+30 more)
include/finevox/audio/: audio_engine.hpp  footstep_tracker.hpp  sound_loader.hpp
include/finevox/core/: batch_builder.hpp  block_data_helpers.hpp  block_event.hpp  block_handler.hpp  block_model.hpp  block_model_loader.hpp  block_type.hpp  chunk_column.hpp  coalescing_queue.hpp  column_manager.hpp  config.hpp  config_file.hpp  config_parser.hpp  data_container.hpp  entity.hpp  entity_manager.hpp  entity_state.hpp  event_queue.hpp  game_actions.hpp  game_session.hpp  graphics_event_queue.hpp  input_context.hpp  inventory.hpp  io_manager.hpp  item_drop_entity.hpp  item_match.hpp  item_registry.hpp  item_stack.hpp  item_type.hpp  key_bindings.hpp  lod.hpp  (+29 more)
resources/biomes/: desert.biome  forest.biome  mountains.biome  plains.biome
resources/blocks/: cobble.model  dirt.model  glowstone.model  grass.model  slab.model  stairs.model  stone.model  stone_slab.model  wedge.model
resources/features/: coal_ore.ore  iron_ore.ore  oak_tree.feature
resources/shapes/: slab_collision.collision  slab_faces.geom  solid_cube.geom  stairs_collision.collision  stairs_faces.geom  wedge_collision.collision  wedge_faces.geom
resources/sounds/: grass.sound  stone.sound
shaders/: chunk.frag  chunk.frag.spv  chunk.vert  chunk.vert.spv  compile.sh  overlay.frag  overlay.vert
src/: batch_builder.cpp  biome.cpp  biome_loader.cpp  biome_map.cpp  block_atlas.cpp  block_event.cpp  block_handler.cpp  block_model.cpp  block_model_loader.cpp  block_type.cpp  chunk_column.cpp  clipboard_manager.cpp  coalescing_queue.cpp  column_manager.cpp  config.cpp  config_file.cpp  config_parser.cpp  data_container.cpp  entity.cpp  entity_manager.cpp  entity_registry.cpp  event_queue.cpp  feature_loader.cpp  feature_ore.cpp  feature_registry.cpp  feature_schematic.cpp  feature_tree.cpp  generation_passes.cpp  graphics_event_queue.cpp  io_manager.cpp  item_registry.cpp  light_data.cpp  light_engine.cpp  lod.cpp  mesh.cpp  mesh_worker_pool.cpp  module.cpp  noise_ops.cpp  noise_perlin.cpp  noise_simplex.cpp  (+18 more)
src/audio/: audio_engine.cpp  footstep_tracker.cpp  sound_loader.cpp
src/core/: batch_builder.cpp  block_event.cpp  block_handler.cpp  block_model.cpp  block_model_loader.cpp  block_type.cpp  chunk_column.cpp  column_manager.cpp  config.cpp  config_file.cpp  config_parser.cpp  data_container.cpp  entity.cpp  entity_manager.cpp  entity_registry.cpp  entity_state.cpp  event_queue.cpp  game_session.cpp  graphics_event_queue.cpp  inventory.cpp  io_manager.cpp  item_drop_entity.cpp  item_registry.cpp  key_bindings.cpp  light_data.cpp  light_engine.cpp  lod.cpp  mesh.cpp  mesh_worker_pool.cpp  module.cpp  name_registry.cpp  palette.cpp  physics.cpp  player_controller.cpp  position.cpp  region_file.cpp  resource_locator.cpp  rotation.cpp  serialization.cpp  sound_event.cpp  (+7 more)
src/render/: block_atlas.cpp  frame_fence_waiter.cpp  subchunk_view.cpp  texture_manager.cpp  world_renderer.cpp
src/script/: block_context_proxy.cpp  data_container_proxy.cpp  game_script_engine.cpp  script_block_handler.cpp  script_cache.cpp
src/worldgen/: biome.cpp  biome_loader.cpp  biome_map.cpp  clipboard_manager.cpp  feature_loader.cpp  feature_ore.cpp  feature_registry.cpp  feature_schematic.cpp  feature_tree.cpp  generation_passes.cpp  noise_ops.cpp  noise_perlin.cpp  noise_simplex.cpp  noise_voronoi.cpp  schematic.cpp  schematic_io.cpp  world_generator.cpp
tests/: test_batch_builder.cpp  test_biome.cpp  test_block_model.cpp  test_block_type.cpp  test_blocking_queue.cpp  test_chunk_column.cpp  test_coalescing_queue.cpp  test_column_manager.cpp  test_config.cpp  test_config_file.cpp  test_config_parser.cpp  test_data_container.cpp  test_event_system.cpp  test_feature.cpp  test_frame_fence_waiter.cpp  test_game_session.cpp  test_game_thread.cpp  test_generation.cpp  test_inventory.cpp  test_io_manager.cpp  test_lighting.cpp  test_lod.cpp  test_lru_cache.cpp  test_mesh.cpp  test_mesh_worker_pool.cpp  test_module.cpp  test_noise.cpp  test_palette.cpp  test_physics.cpp  test_player_controller.cpp  test_position.cpp  test_queue_primitives.cpp  test_region_file.cpp  test_resource_locator.cpp  test_rotation.cpp  test_schematic.cpp  test_script_integration.cpp  test_serialization.cpp  test_sky.cpp  test_sound_system.cpp  (+5 more)
(+36 files in other folders)
